# Yolo-FastestV2

./: .gitignore  README.md  anchors6.txt  evaluation.py  genanchors.py  generate_data.py  note_eval.py  pytorch2onnx.py  requirements.txt  test.py  test_long.py  test_long_trt.py  train.py  yolo.json  yolo_anchor.py
data/: coco.data
model/: detector.py  fpn.py
model/backbone/: backbone.pth  shufflenetv2.py
modelzoo/: coco2017-0.241078ap-model.pth  coco2017-epoch-0.235624ap-model.pth
sample/ncnn/: build.sh  demo.cpp  yolo-fastestv2.cpp
sample/ncnn/model/: yolo-fastestv2.param
sample/ncnn/src/: yolo-fastestv2.cpp
sample/ncnn/src/include/: yolo-fastestv2.h
sample/tensorrt/: CMakeLists.txt  build.sh  test.cpp
sample/tensorrt/src/: musicyolo.cpp
sample/tensorrt/src/include/: audio.h  musicyolo.h
statistics/: datadis.py
utils/: aug.py  datasets.py  loss.py  plot_img.py  utils.py
